[package]
name = "rusty_api"
version = "0.1.0"
authors = ["Acton H. Gorton <agorton@mcclatchy.com>"]
edition = "2018"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-unknown-linux-musl"

[dependencies]
async-graphql = "2.0"
async-std = "1.7.0"
cgi = "0.6.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
serde = "1.0.117"
serde_json = "1.0.60"
tokio = { version = "0.3", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }


