[package]
name = "rusty_api"
version = "0.1.0"
authors = ["Acton H. Gorton <agorton@mcclatchy.com>"]
edition = "2018"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-unknown-linux-musl"

[dependencies]
async-graphql = "2.0"
async-std = "1.7"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
envmnt = "0.8"
libsqlite3-sys = { version = "*", features = ["bundled"] }
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
tokio = { version = "0.3", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }